# adler

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: bench.rs
src/: lib.rs
